objects/Account.object
<CustomObject>
    <fields>
        <fullName>T_Number_of_Competences__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used for the DLRS and the automatic Opp Naming.
Robin S. 28.02.2019</description>
        <label>[T] Number of Competences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_TemporaryRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]Temporary Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicalQualifications__c</fullName>
        <label>Technical Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachkunde</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeneralPowerAnueTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Power Anue Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoricRegistrationDate__c</fullName>
        <label>Historic Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_external_staff__c</fullName>
        <label>Number of external staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_internal_staff__c</fullName>
        <label>Number of internal staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountnameBillingAddress__c</fullName>
        <description>This field defines the Accountname for the Billing Address.
Robin S. 19.02.2020</description>
        <label>Accountname Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalSpecialisations__c</fullName>
        <inlineHelpText>Kenntnisse und Erfahrungen im Umfeld der Zusatzbezeichnungen, die aber (noch) NICHT formal urkundlich als Zusatzbezeichnung vom Arzt erworben wurden. (Beispiele: Geriatrie, Palliativmedizin, Sportmedizin, Neonatologie, Sozialmedizin…)</inlineHelpText>
        <label>Additional Specialisations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableForSubstitueFrom__c</fullName>
        <label>Available For Substitue From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeactivationReasonComment__c</fullName>
        <label>Deactivation Reason Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthcareInstitutionType__c</fullName>
        <label>Healthcare Institution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Einrichtungsart</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastContractEndDatePerson__c</fullName>
        <description>stores the Last Contract End Date from Person Accounts via Rollup Helper from all Contracts (excl. Logic in RollupHelper)</description>
        <label>Last Contract End Date (Person)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegalEntityBillingAddress__c</fullName>
        <description>This field defines the legal entity for the billing address.
Robin S. - 19.02.2020</description>
        <label>Legal Entity Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedCancellationDate__c</fullName>
        <label>Requested Cancellation Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tage</fullName>
                </value>
                <value>
                    <fullName>Wochen zum 15. des Kalendermonats</fullName>
                </value>
                <value>
                    <fullName>Wochen zum Ende des Kalendermonats</fullName>
                </value>
                <value>
                    <fullName>Monate zum Ende des Kalendermonats</fullName>
                </value>
                <value>
                    <fullName>Monate zum Quartal</fullName>
                </value>
                <value>
                    <fullName>Monate zum Jahresende</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedPostalCodeRegion__c</fullName>
        <label>Requested Postal Code Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PLZ_Gebiet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Number_won_Opportunties__c</fullName>
        <label>[T] Number won Opportunties</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>T_SubjectAreaRegistration__c</fullName>
        <label>[T] Subject Area Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountnameContractAddress__c</fullName>
        <description>This field defines the account Name for the contract address.
Robin S. 19.02.2020</description>
        <label>Accountname Contract Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntityContractAddress__c</fullName>
        <description>This field defines the Legal Entity for the contract address.
Robin S. 19.02.2020</description>
        <label>Legal Entity Contract Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusEmploymentFachpflege__c</fullName>
        <label>Status Employment Fachpflege</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Bearbeitung</fullName>
                </value>
                <value>
                    <fullName>Einsatzbogen</fullName>
                </value>
                <value>
                    <fullName>Gehaltsberechnung</fullName>
                </value>
                <value>
                    <fullName>Vertrag zur Ansicht</fullName>
                </value>
                <value>
                    <fullName>Gesprächstermin</fullName>
                </value>
                <value>
                    <fullName>Anstellung Fachpflege</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaregiverJobRegistration__c</fullName>
        <label>[T]Caregiver Job Registration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_DebtorOrCostCenterNumber__c</fullName>
        <description>SFC-2539</description>
        <formula>IF(Debtor_Number__c &lt;&gt;   0 ,TEXT(Debtor_Number__c),TEXT(CostCentreNumber__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]DebtorOrCostCenterNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Last_Activity_on_Account__c</fullName>
        <label>[T]Last Activity on Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_Qualified_to_Active_Date__c</fullName>
        <label>[T]Qualified to Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermsAndConditionsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms and Conditions accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTrainingAndDevelopment__c</fullName>
        <label>Other Training And Development</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_Doctor_Medical_Discipline__c</fullName>
        <description>This field is used for DLRS. References and Concatenate the Competence Object Field.</description>
        <label>[T] Doctor Medical Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastDateStatusSetToPlaceable__c</fullName>
        <label>Last Date Status Set To Placeable</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibility_First_Contact__c</fullName>
        <inlineHelpText>Shows the Account Team Member for Responsibility First Contact</inlineHelpText>
        <label>Responsibility First Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Current_Year_Doctors__c</fullName>
        <label>Annual Potenzial Revenue Doctors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_Doctor_Qualification_Level__c</fullName>
        <description>This field is used for DLRS. References and Concatenate the Competence Object Field.</description>
        <label>[T] Doctor Qualification Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_NumberOfOperatingContracts__c</fullName>
        <description>Lookup Roll-Up Summary counts the number of operating contracts for a person account</description>
        <label>[T] Number of Operating Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalLanguageExamination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Language Examination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_exposed_to_radiation__c</fullName>
        <description>SFC-2513</description>
        <label>Activity exposed to radiation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unbekannt</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_TemporaryDoctorRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T] Temporary Doctor Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmationOfPrivacyStatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Of Privacy Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contract_End_Date_Doctors__c</fullName>
        <description>stores the Last Contract End Date from Business Accounts via Rollup Helper from all DOCTOR Contracts (excl. Logic in RollupHelper)</description>
        <label>Last Contract End Date (Doctors)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MeinDoctariOnboardingCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field needed for doctari PWA for displaying onboarding views only for users that haven&apos;t seen it yet</description>
        <inlineHelpText>Field needed for doctari PWA for displaying onboarding views only for users that haven&apos;t seen it yet</inlineHelpText>
        <label>Mein doctari onboarding completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Amount_of_Doctor_Competences__c</fullName>
        <label>[T]Amount of Doctor Competences</label>
        <summaryForeignKey>CompetenceDoctorAccount__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdditionalDesignationHistorical__c</fullName>
        <description>AdditionalDesignationHistorical is needed for data migration.
Robin S. 25.06.2019</description>
        <label>Additional Designation (Historical)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestedTypesOfHospitalService__c</fullName>
        <label>Requested Types Of Hospital Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>alle</fullName>
                </value>
                <value>
                    <fullName>Tagdienst</fullName>
                </value>
                <value>
                    <fullName>Regeldienst</fullName>
                </value>
                <value>
                    <fullName>Frühdienst</fullName>
                </value>
                <value>
                    <fullName>Spätdienst</fullName>
                </value>
                <value>
                    <fullName>Zwischendienst</fullName>
                </value>
                <value>
                    <fullName>Hintergrunddienst</fullName>
                </value>
                <value>
                    <fullName>Nachtdienst</fullName>
                </value>
                <value>
                    <fullName>Bereitschaftsdienst</fullName>
                </value>
                <value>
                    <fullName>Hausbereitschaftsdienst</fullName>
                </value>
                <value>
                    <fullName>Rufbereitschaftsdienst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_annual_external_Doctors__c</fullName>
        <label>Count of annual external Doctors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contract_End_Date_Caregiver__c</fullName>
        <description>stores the Last Contract End Date from Business Accounts via Rollup Helper from all CAREGIVER Contracts (excl. Logic in RollupHelper)</description>
        <label>Last Contract End Date (Caregiver)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T6Months_after_Account_is_active__c</fullName>
        <formula>ADDMONTHS(  T_Qualified_to_Active_Date__c  ,6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]6Months after Account is active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_Doctor_Additional_Designations__c</fullName>
        <description>This field is used for DLRS. References and Concatenate the Competence Object Field.</description>
        <label>[T] Doctor Additional Designations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_PermanentPlacementRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]Permanent Placement Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Amount_of_Caregiver_Competences__c</fullName>
        <label>[T]Amount of Caregiver Competences</label>
        <summaryForeignKey>CompetenceCaregiverAccount__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>T_DoctorQualificationRegistration__c</fullName>
        <label>[T] Doctor Qualification Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_NumberGeneralPowerAnueTemplates__c</fullName>
        <label>[T] Number General Power Anue Templates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Potenzial_Revenue_Caregiver__c</fullName>
        <label>Annual Potenzial Revenue Caregiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Potenzial_Revenue_PP_Doctors__c</fullName>
        <label>Annual Potenzial Revenue PP Doctors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AvailableForPermanentEmploymentFrom__c</fullName>
        <label>Available For Permanent Employment From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_of_annual_external_Caregivers__c</fullName>
        <label>Count of annual external Caregivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_annual_external_PP_Doctors__c</fullName>
        <label>Count of annual external PP Doctors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_PermanentEmploymentDoctorRegistra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T] Permanent Employment Doctor Registra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Potenzial_Revenue_PP_Cargiver__c</fullName>
        <label>Annual Potenzial Revenue PP Cargiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Contract_Creation_Date_Doctors__c</fullName>
        <description>Is filled by lookup roll-up summary</description>
        <label>First Contract Creation Date Doctors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_CaregiverFurtherEducatRegistration__c</fullName>
        <label>[T]Caregiver Further Educat Registration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>freigeschaltet_f_r_App_Time_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Über das technisches Feld soll die Zielgruppe für den Echt-User-Test zum Dienstzeitenerfassen in der App bestimmt werden.</description>
        <label>freigeschaltet für App Time Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_annual_external_PP_Caregiver__c</fullName>
        <label>Count of annual external PP Caregiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contract_Creation_Date_Placement__c</fullName>
        <description>Is filled by lookup roll-up summary</description>
        <label>First Contract Creation Date Placement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Contract_Creation_Date_Caregivers__c</fullName>
        <description>Is filled by lookup roll-up summary</description>
        <label>First Contract Creation Date Caregivers</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>doctorsSurgery</fullName>
        <active>true</active>
        <label>Doctors Surgery</label>
    </recordTypes>
    <recordTypes>
        <fullName>healthcareInstitution</fullName>
        <active>true</active>
        <label>Healthcare Institution</label>
    </recordTypes>
    <validationRules>
        <fullName>MobilePhoneNumber</fullName>
        <active>false</active>
        <description>Checks, if the number starts with a swiss or german mobile number. Before validation, it remove the characters &quot;(&quot;, &quot;)&quot;, &quot;/&quot;, &quot;-&quot; and &quot; &quot;.</description>
        <errorConditionFormula>AND(
  NOT(REGEX(
    SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
      PersonMobilePhone,
    &apos;(&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;/&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;),
    &quot;^((0|0049|\\+49)(15|16|17)|((00|\\+)417(5|6|74|8|9)))[0-9]+$&quot;
  )),
  NOT(ISBLANK(PersonMobilePhone))
)</errorConditionFormula>
        <errorDisplayField>PersonMobilePhone</errorDisplayField>
        <errorMessage>Nur Mobilfunknummern sind erlaubt.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusNewOnlyOnce</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; ISPICKVAL( Status__c , &apos;Neu&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Der Status kann nicht auf &apos;Neu&apos; gesetzt werden</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusChangeAcitve</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId != &apos;00e1r0000027FuT&apos; &amp;&amp; 
$User.ProfileId != &apos;00e1r000001RSgU&apos; &amp;&amp; 
RecordType.Name == &quot;Caregiver&quot; &amp;&amp; 
ISCHANGED(Status__c) &amp;&amp; 
PRIORVALUE(Status__c) != &quot;Aktiv - Vermittelbar&quot; &amp;&amp; 
TEXT(Status__c) == &quot;Aktiv - Vermittelbar&quot;</errorConditionFormula>
        <errorMessage>Dieser Status darf nur durch die &quot;doctari Personal &amp; Vertragsabteilung&quot; gesetzt werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salutation_Required</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r000001RSX8&quot; 
&amp;&amp; IsPersonAccount == true 
&amp;&amp; ISPICKVAL( Parent.Salutation , &quot;&quot;) &amp;&amp; ISPICKVAL(Salutation , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Anrede darf nicht leer sein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Anstellung</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
ISPICKVAL(StatusEmploymentANUE__c, &quot;befristet&quot;),
ISPICKVAL( StatusEmploymentFachpflege__c , &quot;Anstellung Fachpflege&quot;)
),

AND(
ISPICKVAL(StatusEmploymentANUE__c, &quot;entfristet&quot;),
ISPICKVAL( StatusEmploymentFachpflege__c , &quot;Anstellung Fachpflege&quot;)
)
)</errorConditionFormula>
        <errorMessage>Ein Pfleger darf entweder den &quot;Status Anstellung Fachpflege&quot; = Anstellung Fachpflege haben ODER den &quot;Status Anstellung ANÜ&quot; = befristet ODER den &quot;Status Anstellung ANÜ&quot; = entfristet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salutation_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot;
&amp;&amp; IsPersonAccount == true
&amp;&amp; ISPICKVAL( Parent.Salutation , &quot;&quot;) &amp;&amp; ISPICKVAL(Salutation , &quot;&quot;)</errorConditionFormula>
        <errorMessage>Das Feld &quot;Anrede&quot; muss einen Wert enthalten.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonAccount_Nationality</fullName>
        <active>true</active>
        <description>The nationality is mandatory if a person account is set to &quot;Active - Placeable&quot;.</description>
        <errorConditionFormula>IsPersonAccount = true &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c,&quot;Aktiv - Vermittelbar&quot;) &amp;&amp;

ISBLANK(TEXT(Nationality__pc))</errorConditionFormula>
        <errorMessage>The nationality is mandatory if a person account is set to &quot;Active - Placeable&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonAccount_PlaceOfBirth</fullName>
        <active>true</active>
        <description>The place of birth is mandatory if the person account status is set to &quot;Actively Placeable&quot;.</description>
        <errorConditionFormula>IsPersonAccount = true &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c,&quot;Aktiv - Vermittelbar&quot;) &amp;&amp;

ISBLANK(PlaceOfBirth__c)</errorConditionFormula>
        <errorMessage>Please add the place of birth in order to set the account to &quot;Active - Placable&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveToBeforeInactiveFrom</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; InactiveTo__c &lt;  InactiveFrom__c</errorConditionFormula>
        <errorDisplayField>InactiveFrom__c</errorDisplayField>
        <errorMessage>Das Feld Inaktiv bis darf nicht vor dem Feld Inaktiv von sein</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TermsOfServiceDataPolicyCheck</fullName>
        <active>true</active>
        <description>Check if an Business Account has accepted terms of service and a confirmed privacy statement before the status is set to active.</description>
        <errorConditionFormula>(TermsAndConditionsAccepted__c = false ||
ConfirmationOfPrivacyStatement__c = false) &amp;&amp;
ISPICKVAL(Status__c, &quot;Aktiv&quot;) &amp;&amp;
ISCHANGED(Status__c)</errorConditionFormula>
        <errorMessage>Der Account darf nicht auf &quot;Aktiv&quot; gesetzt werden, wenn die AGB und/oder Datenschutzbestimmung nicht auf &quot;akzeptiert&quot; gesetzt sind.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_for_deactivation_reason</fullName>
        <active>true</active>
        <description>Status inaktiv nur mit Begründung</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; (ispickval( Status__c ,&quot;Inaktiv&quot;) ||  OptOut__pc == true) &amp;&amp;
isblank(text( DeactivationReason__c ))</errorConditionFormula>
        <errorDisplayField>DeactivationReason__c</errorDisplayField>
        <errorMessage>Bitte immer einen Deaktivierungsgrund angeben</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonAccount_AddressMandatory</fullName>
        <active>true</active>
        <description>Mailing Address is mandatory for account activation.</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c),&quot;Aktiv_Mailing&quot;) &amp;&amp;

ISPICKVAL(Status__c, &quot;Aktiv - Vermittelbar&quot;)&amp;&amp;
OR(
ISBLANK(PersonMailingStreet),
ISBLANK(PersonMailingPostalCode),
ISBLANK(PersonMailingCountry))</errorConditionFormula>
        <errorMessage>Mailing Address is mandatory for account activation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Birthdate_and_competence_doctor</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;Aktiv - Vermittelbar&quot;)&amp;&amp;
OR(
ISBLANK( PersonBirthdate ),
 T_Amount_of_Doctor_Competences__c  = 0) &amp;&amp;

 RecordType.DeveloperName == &quot;doctor&quot; &amp;&amp;

 OR(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Aktiv_Mailing&quot;), ISPICKVAL(PRIORVALUE( Status__c ), &quot;Qualifizierung&quot;))</errorConditionFormula>
        <errorMessage>In order to set an account active the birthdate has to be filled and there needs to be at least one related competence.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BusinessAccount_AddressMandatory</fullName>
        <active>true</active>
        <description>Shipping Address is mandatory for account activation.</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c),&quot;Qualifizierung&quot;) &amp;&amp;
ISPICKVAL(Status__c, &quot;Aktiv&quot;)&amp;&amp;
OR(
ISBLANK(ShippingStreet),
ISBLANK(ShippingPostalCode),
ISBLANK(ShippingCountry))</errorConditionFormula>
        <errorMessage>Shipping Address is mandatory for account activation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Birthdate_and_competence_caregiver</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;Aktiv - Vermittelbar&quot;)&amp;&amp;
OR(
ISBLANK( PersonBirthdate ),
T_Amount_of_Caregiver_Competences__c = 0) &amp;&amp;

 RecordType.DeveloperName == &quot;caregiver&quot; &amp;&amp;

 OR(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Aktiv_Mailing&quot;), ISPICKVAL(PRIORVALUE( Status__c ), &quot;Qualifizierung&quot;))</errorConditionFormula>
        <errorMessage>In order to set an account active the birthdate has to be filled and there needs to be at least one related competence.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BusinessAccount_Name_maximum_length</fullName>
        <active>true</active>
        <description>BusinessAccount Name maximum length = 100</description>
        <errorConditionFormula>(RecordType.DeveloperName = &quot;healthcareInstitution&quot; ||
RecordType.DeveloperName = &quot;doctorsSurgery&quot;) &amp;&amp;
LEN( Name ) &gt; 100</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Maximum length for AccountName is 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveToFilledButInactiveFromEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ISBLANK(InactiveFrom__c) &amp;&amp; !ISBLANK(InactiveTo__c)</errorConditionFormula>
        <errorDisplayField>InactiveFrom__c</errorDisplayField>
        <errorMessage>Inaktiv von darf nicht leer sein, wenn Inaktiv bis befüllt ist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthcareInstitANDDoctorSurgReadOnly</fullName>
        <active>false</active>
        <description>For the MVP: Business Accounts are read only 
Excluded: Sys Admin, API User, Marketo User</description>
        <errorConditionFormula>OR( RecordType.DeveloperName = &quot;doctorsSurgery&quot;,
RecordType.DeveloperName = &quot;healthcareInstitution&quot;,
RecordType.DeveloperName = &quot;doctor&quot;) &amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; 
$User.ProfileId &lt;&gt; &quot;00e1r000001dfij&quot; &amp;&amp; 
$User.ProfileId &lt;&gt; &quot;00e1r000001RSX8&quot;</errorConditionFormula>
        <errorMessage>Healthcare Institution, Doctor Surgery and Doctors are read only. Please use VTiger to change the data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marketing_Opt_in_restriction_PersonAcc</fullName>
        <active>true</active>
        <description>If Marketing Opt out checked, Opt in (unchecked) is restricted</description>
        <errorConditionFormula>ISCHANGED(mkto71_Marketo_Opt_Out__pc ) &amp;&amp; mkto71_Marketo_Opt_Out__pc =false &amp;&amp; NOT($Profile.Name = &quot;Systemadministrator&quot;) &amp;&amp; NOT($Profile.Name = &quot;doctari Marketo Sync&quot;) &amp;&amp; NOT($Profile.Name = &quot;Api-Profil&quot;)</errorConditionFormula>
        <errorDisplayField>mkto71_Marketo_Opt_Out__pc</errorDisplayField>
        <errorMessage>You can&apos;t uncheck an existing Marketing Opt out for data privacy reasons.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AvailableForPermanentEmployment_required</fullName>
        <active>true</active>
        <errorConditionFormula>IsPersonAccount = true &amp;&amp;

ISPICKVAL(Status__c, &quot;Aktiv - Vermittelbar&quot;) &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;

(ISPICKVAL( StatusEmploymentFachpflege__c, &quot;Vertrag zur Ansicht&quot;) || 
ISPICKVAL( StatusEmploymentFachpflege__c, &quot;Gesprächstermin&quot;)) &amp;&amp;

ISBLANK(AvailableForPermanentEmploymentFrom__c)</errorConditionFormula>
        <errorDisplayField>AvailableForPermanentEmploymentFrom__c</errorDisplayField>
        <errorMessage>Sobald &quot;Status Anstellung Fachpflege&quot; den Wert &quot;Vertrag zur Ansicht&quot; oder &quot;Gesprächstermin&quot; enthält, ist &quot;Verfügbar für Festanstellung ab&quot; zu füllen.</errorMessage>
    </validationRules>
</CustomObject>